rooms listing completd

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,17 +1,17 @@
-.header__logo img{
-height: 70px;
-}/* Base Header Styles */
-.header {
-    position: relative;
-    width: 100%;
-    z-index: 1000;
-    background-color: #fff; /* Ensure background color is set */
-    transition: all 0.3s ease; /* Smooth transition */
-  }
+// .header__logo img{
+// height: 70px;
+// }/* Base Header Styles */
+// .header {
+//     position: relative;
+//     width: 100%;
+//     z-index: 1000;
+//     background-color: #fff; /* Ensure background color is set */
+//     transition: all 0.3s ease; /* Smooth transition */
+//   }
   
-  .header__top {
-      background: #f7f7f7; /* Optional background for the top header */
-  }
+//   .header__top {
+//       background: #f7f7f7; /* Optional background for the top header */
+//   }
   
   .header.scrolled {
     position: fixed;
@@ -22,23 +22,67 @@ height: 70px;
     transition: all 0.3s ease;
   }
   
-  /* Adjust spacing when scrolled */
-  .header.scrolled .header__top {
-    display: none; /* Hide top section on scroll (optional) */
-  }
+//   /* Adjust spacing when scrolled */
+//   .header.scrolled .header__top {
+//     display: none; /* Hide top section on scroll (optional) */
+//   }
   
-  .header.scrolled .header__nav__option {
-    padding: 10px 0; /* Reduce padding on scroll */
-  }
+//   .header.scrolled .header__nav__option {
+//     padding: 10px 0; /* Reduce padding on scroll */
+//   }
   
-  /* Responsive Design */
-  @media (max-width: 991.98px) {
-    .header {
-      position: static; /* For smaller screens, keep the header static */
-    }
+//   /* Responsive Design */
+//   @media (max-width: 991.98px) {
+//     .header {
+//       position: static; /* For smaller screens, keep the header static */
+//     }
   
-    .header.scrolled {
-      position: fixed;
-    }
-  }
-  
+//     .header.scrolled {
+//       position: fixed;
+//     }
+//   }
+//   .btn {
+//     // display: inline-block;
+//     padding: 10px 20px;
+//     font-size: 14px;
+//     font-weight: 600;
+//     text-transform: uppercase;
+//     // border-radius: 25px;
+//     text-decoration: none;
+//     transition: all 0.3s ease;
+    
+// }
+.btn{
+ border:none;
+ padding:10px;
+ margin-left:10px;
+}
+
+// .btn-primary {
+//     background-color: #585858;
+//     color: #fff;
+//     border: 1px solid #484949;
+//     margin-right: 10px;;
+// }
+
+// .btn-primary:hover {
+//     background-color: #585858;
+//     border-color:#585858;
+//     color: #fff;
+// }
+
+// .btn-success {
+//     background-color:#E6A405;
+//     color: #fff;
+//     border: 1px solid#E6A405;
+// }
+
+// .btn-success:hover {
+//     background-color:#E6A405;
+//     border-color: #E6A405;
+//     color: #fff;
+// }
+
+// .btn i {
+//     margin-right: 5px;
+// }
