--- a/src/app/views/user-dashboard/hotel-list/hotel-list.component.html
+++ b/src/app/views/user-dashboard/hotel-list/hotel-list.component.html
@@ -33,16 +33,15 @@
                   </div>
             </div>
             <div class="col-md-6"> 
-                <div class="hotel-info">
-               
+                <div class="hotel-info">               
                 <h5>Super Townhouse Rammanurthy Nagar</h5>
                 <p>Near Rammanurthy Nagar Police Station, Bangalore</p>
                 <p class="price">₹997 <span class="discount">73% off</span></p>
                 <p class="rating">Rating: 4.1 ⭐</p>
                 <ul class="amenities">
-                  <li><i class="fa fa-check-circle"></i> Electric Kettle</li>
-                  <li><i class="fa fa-check-circle"></i> Free Wi-Fi</li>
-                  <li><i class="fa fa-check-circle"></i> Daily Housekeeping</li>
+                  <li><i class="fa fa-check-circle" aria-hidden="true"></i> Electric Kettle</li>
+                  <li><i class="fa fa-check-circle" aria-hidden="true"></i> Free Wi-Fi</li>
+                  <li><i class="fa fa-check-circle" aria-hidden="true"></i> Daily Housekeeping</li>
                 </ul>
                
               </div>
