--- a/src/app/views/user-dashboard/profile/profile.component.html
+++ b/src/app/views/user-dashboard/profile/profile.component.html
@@ -1,1 +1,22 @@
-<p>profile works!</p>
+<div class="left-section">
+    <h1>There's a smarter way to OYO around</h1>
+    <p>Sign up with your phone number and get exclusive access to discounts and savings on OYO stays and with our many travel partners.</p>
+  </div>
+  <div class="right-section">
+    <h2>Sign up & Get ₹500 OYO Money</h2>
+    <form>
+      <label for="phone">Please enter your phone number to continue</label>
+      <input type="tel" id="phone" placeholder="+91">
+      <button type="submit">Verify Number</button>
+      <div class="link">
+        Prefer to Sign in with password instead? <a href="#">Click here</a>
+      </div>
+    </form>
+    <div class="or-sign-in">
+      <span>Or sign in as</span>
+    </div>
+    <div class="options">
+      <a href="#">Travel Agent</a>
+      <a href="#">Corporate</a>
+    </div>
+  </div>
