--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer Section Begin -->
-<footer class="footer set-bg" data-setbg="assets/img/footer-bg.jpg">
+<footer class="footer set-bg" id="footer" data-setbg="assets/img/footer-bg.jpg">
     <!-- <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -48,11 +48,11 @@
                     <div class="footer__widget">
                         <h4>Quick Link</h4>
                         <ul>
-                            <li><a href="#">Home</a></li>
+                            <li><a routerLink="">Home</a></li>
                             <li><a href="#">Booking</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a routerLink="/about">About Us</a></li>
                             <li><a href="#">Review</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a routerLink="/contact">Contact</a></li>
                         </ul>
                         <ul>
                             <li><a href="#">Services</a></li>
@@ -90,8 +90,8 @@
                 </div>
                 <div class="col-lg-5 col-md-5">
                     <ul class="footer__copyright__links">
-                        <li><a href="#">Terms Of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a routerLink="/terms-conditions">Terms Of Use</a></li>
+                        <li><a routerLink="/privacy-policy">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
