--- a/src/app/views/user-dashboard/hotel-card/hotel-card.component.html
+++ b/src/app/views/user-dashboard/hotel-card/hotel-card.component.html
@@ -3,10 +3,10 @@
     <div class="room-details-slider">
       <div class="container">
           <div class="room__details__pic__slider owl-carousel">
-              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/img/rooms/details/rd-1.jpg"></div>
-              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/img/rooms/details/rd-2.jpg"></div>
-              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/img/rooms/details/rd-3.jpg"></div>
-              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/img/rooms/details/rd-4.jpg"></div>
+              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/img/hotel1.jpg"></div>
+              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/img/hotel6.jpg"></div>
+              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/imghotel7..jpg"></div>
+              <div class="room__details__pic__slider__item set-bg" data-setbg="assets/img/hotel6..jpg"></div>
           </div>
       </div>
   </div>
