--- a/src/app/views/user-dashboard/user-dashboard.component.scss
+++ b/src/app/views/user-dashboard/user-dashboard.component.scss
@@ -42,3 +42,73 @@
         }
       }
       
+      #section{
+          padding:30px;
+          background-color: #030303;
+      }
+      .user-dropdown {
+        position: relative;
+        display: inline-block;
+        padding-top:10px;
+    }
+    
+    .user-icon {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        overflow: hidden;
+        background-color: #f0f0f0;
+    
+    }
+    
+    .user-icon img {
+        width: 100%;
+        height: auto;
+    }
+    
+    .dropdown-menu {
+        position: absolute;
+        top: 50px;
+        right: 0;
+        display: none;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        list-style: none;
+        padding: 10px 0;
+        z-index: 1000;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    .dropdown-menu.show {
+        display: block;
+    }
+    
+    .dropdown-menu li {
+        padding: 10px 20px;
+    }
+    
+    .dropdown-menu li a {
+        text-decoration: none;
+        color: #333;
+        font-size: 14px;
+        display: block;
+    }
+    
+    .dropdown-menu li a:hover {
+        background-color: #f5f5f5;
+        color: #000;
+    }
+  #a1{
+     
+      margin: auto;
+      border-bottom: 1px solid #e4990d;
+    }
+    #a1 > a {
+      color: #fff;
+  }
+  
